# Bankstatements2iCost

./: .env.example  .gitignore  CHANGELOG.md  COMMIT_CHECKLIST.md  LICENSE  README.md  mappings.yaml  pyproject.toml  requirements.txt
src/: transform_prelim.py
src/bank2csv/: cli.py
